# safe-dataframe

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yml
safe_dataframe/: __init__.py  data.py  transforms.py
tests/: test_data.py
